POR/RefEdge/src/objects/Reward__c.object
<CustomObject>
    <description>Custom Object to Store Rewards.(Bound 4)</description>
    <fields>
        <fullName>Account_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Request</label>
        <referenceTo>Reference_Request_Account__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Automatically_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_Points__c</fullName>
        <label>Available Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Request</label>
        <referenceTo>Reference_Request_Account_Contact__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired_Points__c</fullName>
        <label>Expired Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expired_Points_in_influitive__c</fullName>
        <description>Expired Points in influitive</description>
        <inlineHelpText>Expired Points in influitive</inlineHelpText>
        <label>Expired Points in Influitive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Influitive_ID2__c</fullName>
        <externalId>true</externalId>
        <label>Influitive ID2</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Influitive_Id__c</fullName>
        <label>Influitive Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referenceability_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type</label>
        <referenceTo>Referenceability_Type__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RewardDate__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction</label>
        <picklist>
            <picklistValues>
                <fullName>Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redeem</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reward</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Transaction__c</columns>
        <columns>Amount__c</columns>
        <columns>Available_Points__c</columns>
        <columns>Expired_Points__c</columns>
        <columns>Referenceability_Type__c</columns>
        <columns>Automatically_Assigned__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Expired__c</columns>
        <columns>Account_Request__c</columns>
        <columns>Contact_Request__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RW-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>